@@ -14,6 +14,8 @@
 
 from relstorage.adapters.interfaces import IPoller
 from zope.interface import implements
+import logging
+log = logging.getLogger(__name__)
 
 class Poller:
     """Database change notification poller"""
@@ -51,8 +53,12 @@ class Poller:
             # If the previously polled transaction no longer exists,
             # the cache is too old and needs to be cleared.
             # XXX Do we actually need to detect this condition? I think
-            # if we delete this block of code, all the reachable objects
-            # will be invalidated anyway.
+            # if we delete this block of code, all the unreachable
+            # objects will be invalidated anyway. So, as a test, I have
+            # not written the equivalent of this block of code for
+            # history-free storage. If something goes wrong, then we'll
+            # know there's some other edge condition we have to account
+            # for.
             stmt = "SELECT 1 FROM transaction WHERE tid = %(tid)s"
             cursor.execute(intern(stmt % self.runner.script_vars),
                 {'tid': prev_polled_tid})
@@ -63,23 +69,42 @@ class Poller:
                 return None, new_polled_tid
 
         # Get the list of changed OIDs and return it.
-        if self.keep_history:
-            stmt = """
-            SELECT zoid
-            FROM current_object
-            WHERE tid > %(tid)s
-            """
+        if new_polled_tid > prev_polled_tid:
+            if self.keep_history:
+                stmt = """
+                SELECT zoid
+                FROM current_object
+                WHERE tid > %(tid)s
+                """
+            else:
+                stmt = """
+                SELECT zoid
+                FROM object_state
+                WHERE tid > %(tid)s
+                """
+            params = {'tid': prev_polled_tid}
+            if ignore_tid is not None:
+                stmt += " AND tid != %(self_tid)s"
+                params['self_tid'] = ignore_tid
+            stmt = intern(stmt % self.runner.script_vars)
+
         else:
-            stmt = """
-            SELECT zoid
-            FROM object_state
-            WHERE tid > %(tid)s
-            """
-        params = {'tid': prev_polled_tid}
-        if ignore_tid is not None:
-            stmt += " AND tid != %(self_tid)s"
-            params['self_tid'] = ignore_tid
-        stmt = intern(stmt % self.runner.script_vars)
+            # We moved backward in time. This can happen after failover
+            # to an asynchronous slave that is not fully up to date. If
+            # this was not caused by failover, it suggests that
+            # transaction IDs are not being created in order, which can
+            # lead to consistency violations.
+            log.warning(
+                "Detected backward time travel (old tid %d, new tid %d). "
+                "This is acceptable if it was caused by failover to a "
+                "read-only asynchronous slave, but otherwise it may "
+                "indicate a problem.",
+                prev_polled_tid, new_polled_tid)
+            # Although we could handle this situation by looking at the
+            # whole cache and invalidating only certain objects,
+            # invalidating the whole cache is simpler.
+            return None, new_polled_tid
+
         cursor.execute(stmt, params)
         oids = [oid for (oid,) in cursor]
 
